anotacoes sobre escopo global e local

--- a/aula15/index.html
+++ b/aula15/index.html
@@ -13,5 +13,6 @@
     console.log('JS no browser!')
   </script> -->
   <script src="js/main.js"></script>
+  <script src="js/main2.js"></script>
 </body>
 </html>
