anotacoes sobre o this

--- a/aula15/index.html
+++ b/aula15/index.html
@@ -14,5 +14,6 @@
   </script> -->
   <script src="js/main.js"></script>
   <script src="js/main2.js"></script>
+  <script src="js/this.js"></script>
 </body>
 </html>
