--- a/aula15/index.html
+++ b/aula15/index.html
@@ -15,5 +15,6 @@
   <script src="js/main.js"></script>
   <script src="js/main2.js"></script>
   <script src="js/this.js"></script>
+  <script src="desafio15.js"></script>
 </body>
 </html>
